--- a/src/app/admin/modules/product-type/product-type/product-type.component.html
+++ b/src/app/admin/modules/product-type/product-type/product-type.component.html
@@ -2,9 +2,9 @@
   <div class="flex items-center">
     <h4 class="text-base font-bold">Danh sách loại sản phẩm</h4>
     <nz-input-group nzSize="small" class="ml-auto w-1/3 rounded-md input-group" [nzSuffix]="suffixIconSearch">
-      <input type="text" class="text-base" nz-input placeholder="Tìm kiếm" />
+      <input type="text" class="text-base" nz-input placeholder="Tìm kiếm" [(ngModel)]="filterName" (ngModelChange)="onFilterNameChange($event)" />
     </nz-input-group>
-    
+
   </div>
 </div>
 <div class="flex items-center mt-2">
@@ -23,20 +23,37 @@
     </thead>
     <tbody>
       <tr *ngIf="isAdding">
-        <td><input nz-input type="text"></td>
-        <td><input nz-input type="text"></td>
+        <td><input nz-input type="text" [(ngModel)]="newProductType.name"></td>
+        <td><input nz-input type="text" [(ngModel)]="newProductType.code"></td>
         <td nzAlign="center">
-          <i nz-icon nzType="close-square" nzTheme="outline" class="mr-2 cursor-pointer text-xl text-red-500"></i>
-          <i nz-icon nzType="save" nzTheme="outline" class="text-xl cursor-pointer text-blue-500"></i>
+          <i nz-icon nzType="close-square" nzTheme="outline" class="mr-2 cursor-pointer text-xl text-red-500"
+            (click)="closeAddRow()"></i>
+          <i nz-icon nzType="save" nzTheme="outline" class="text-xl cursor-pointer text-blue-500"
+            (click)="saveNewItem()"></i>
         </td>
       </tr>
       <tr *ngFor="let data of basicTable.data">
-        <td>{{data.name}}</td>
-        <td>{{data.code}}</td>
+        <ng-container *ngIf="!editCache[data.id].edit else editTmp">
+          <td>{{data.name}}</td>
+          <td>{{data.code}}</td>
+          <td nzAlign="center">
+            <i nz-icon nzType="delete" nzTheme="outline" class="mr-2 cursor-pointer text-xl text-red-500" nz-popconfirm
+              nzPopconfirmTitle="Bạn có muốn xoá loại sản phẩm này?" nzPopconfirmPlacement="bottom"
+              (nzOnConfirm)="deleteProductType(data.id)"></i>
+            <i nz-icon nzType="edit" nzTheme="outline" class="text-xl cursor-pointer text-blue-500"
+              (click)="onEditClick(data.id)"></i>
+          </td>
+        </ng-container>
+        <ng-template #editTmp>
+          <td><input nz-input type="text" [(ngModel)]="editCache[data.id].data.name"></td>
+        <td><input nz-input type="text" [(ngModel)]="editCache[data.id].data.code"></td>
         <td nzAlign="center">
-          <i nz-icon nzType="delete" nzTheme="outline" class="mr-2 cursor-pointer text-xl text-red-500"></i>
-          <i nz-icon nzType="edit" nzTheme="outline" class="text-xl cursor-pointer text-blue-500"></i>
+          <i nz-icon nzType="close-square" nzTheme="outline" class="mr-2 cursor-pointer text-xl text-red-500"
+            (click)="closeEdit(data.id)"></i>
+          <i nz-icon nzType="save" nzTheme="outline" class="text-xl cursor-pointer text-blue-500"
+            (click)="saveEditItem(editCache[data.id])"></i>
         </td>
+        </ng-template>
       </tr>
     </tbody>
   </nz-table>
