--- a/src/app/admin/modules/supplier/supplier/supplier.component.html
+++ b/src/app/admin/modules/supplier/supplier/supplier.component.html
@@ -2,9 +2,10 @@
   <div class="flex items-center">
     <h4 class="text-base font-bold">Danh sách nhà cung cấp</h4>
     <nz-input-group nzSize="small" class="ml-auto w-1/3 rounded-md input-group" [nzSuffix]="suffixIconSearch">
-      <input type="text" class="text-base" nz-input placeholder="Tìm kiếm" />
+      <input type="text" class="text-base" nz-input placeholder="Tìm kiếm" [(ngModel)]="searchName"
+        (ngModelChange)="onSearchNameChange($event)" />
     </nz-input-group>
-    
+
   </div>
 </div>
 <div class="flex items-center mt-2">
@@ -13,31 +14,32 @@
   </button>
 </div>
 <div class="mt-2">
-  <div class="flex mt-4 items-center p-4 rounded-r-2xl rounded-l-2xl shadow-lg border-2 border-gray-100">
-    <img src="assets/icon/small-icon.png" class="w-16 h-16 object-contain">
-    <h4 class="ml-4 text-base font-medium">CellphoneS</h4>
-    <div class="ml-auto">
-      <i nz-icon nzType="delete" class="text-2xl mr-1 text-red-500 cursor-pointer" nzTheme="outline"></i>
-      <i nz-icon nzType="edit" class="text-2xl text-blue-500 cursor-pointer" nzTheme="outline"></i>
+  <ng-container *ngFor="let item of supplierPaging.items">
+    <div class="flex mt-4 items-center p-4 rounded-r-2xl rounded-l-2xl shadow-lg border-2 border-gray-100">
+      <img [src]="item.logo" class="w-16 h-16 object-contain">
+      <h4 class="ml-4 text-base font-medium">{{item.name | uppercase}}</h4>
+      <div class="ml-auto">
+        <i nz-icon nzType="delete" class="text-2xl mr-1 text-red-500 cursor-pointer" nzTheme="outline" nz-popconfirm
+          nzPopconfirmTitle="Bạn có muốn xoá nhà cung cấp này?" nzPopconfirmPlacement="bottom"
+          (nzOnConfirm)="deleteSupplier(item.id)"></i>
+        <i nz-icon nzType="edit" class="text-2xl text-blue-500 cursor-pointer" nzTheme="outline"
+          (click)="editSupplier(item.id)"></i>
+      </div>
     </div>
-  </div>
-  <div class="flex mt-4 items-center p-4 rounded-r-2xl rounded-l-2xl shadow-lg border-2 border-gray-100">
-    <img src="assets/icon/small-icon.png" class="w-16 h-16 object-contain">
-    <h4 class="ml-4 text-base font-medium">CellphoneS</h4>
-    <div class="ml-auto">
-      <i nz-icon nzType="edit" class="text-2xl text-red-500 cursor-pointer" nzTheme="outline"></i>
-    </div>
-  </div>
+  </ng-container>
 </div>
 
-<nz-pagination class="mt-8 flex justify-center" [nzPageIndex]="1" [nzTotal]="500" [nzItemRender]="renderItemTemplate"></nz-pagination>
+<nz-pagination class="mt-8 flex justify-center" [nzPageIndex]="supplierPaging.pageIndex"
+  [nzTotal]="supplierPaging.totalCount" [nzPageSize]="supplierPaging.pageSize" [nzItemRender]="renderItemTemplate" (nzPageIndexChange)="onPageIndexChange($event)">
+</nz-pagination>
 <ng-template #renderItemTemplate let-type let-page="page">
   <ng-container [ngSwitch]="type">
     <a *ngSwitchCase="'page'">{{ page }}</a>
     <a *ngSwitchCase="'prev'">Previous</a>
     <a *ngSwitchCase="'next'">Next</a>
-    <a *ngSwitchCase="'prev_5'"><< </a>
-    <a *ngSwitchCase="'next_5'">>></a>
+    <a *ngSwitchCase="'prev_5'">
+      << </a>
+        <a *ngSwitchCase="'next_5'">>></a>
   </ng-container>
 </ng-template>
 <ng-template #suffixIconSearch>
