--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
-<div class="flex justify-center">
+<div class="flex justify-center w-1200 ml-auto mr-auto">
   <router-outlet></router-outlet>
 </div>
