--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -8,8 +8,8 @@
       <div class="col-span-2 p-4">
         <h3 class="text-2xl font-semibold">Xin chào,</h3>
         <p class="text-base ">Đăng nhập</p>
-        <input class="mt-4 text-base" type="text" nz-input placeholder="Email">
-        <input class="mt-4 text-base" type="password" nz-input placeholder="Mật khẩu">
+        <input class="mt-4 text-base" type="text" nz-input placeholder="Tên đăng nhập" [(ngModel)]="username">
+        <input class="mt-4 text-base" type="password" nz-input placeholder="Mật khẩu" [(ngModel)]="password">
         <button
           class="mt-4 w-full text-base font-medium bg-red-300 border-red-500 border-2 text-white py-1 hover:bg-red-500" (click)="login()">Đăng
           nhập</button>
