--- a/src/app/core/layouts/header/header.component.html
+++ b/src/app/core/layouts/header/header.component.html
@@ -1,7 +1,7 @@
-<div class="flex justify-center h-16 bg-red-custom items-center">
+<div class="flex justify-center h-16 bg-red-custom items-center" *ngIf="userProfile$ | async as userProfile">
   <a href=""><img class="hover:cursor-pointer h-16" src="assets/icon/large-icon.png"></a>
   <i class="text-white text-4xl flex items-center hover:cursor-pointer ml-4" cl nz-icon nzType="bars" nzTheme="outline"
-    nz-dropdown [nzDropdownMenu]="menu"  nzPlacement="bottomRight" nzTrigger="click">
+    nz-dropdown [nzDropdownMenu]="menu" nzPlacement="bottomRight" nzTrigger="click">
     <nz-dropdown-menu #menu="nzDropdownMenu">
       <ul nz-menu nzSelectable>
         <li nz-menu-item>1st menu item</li>
@@ -25,9 +25,28 @@
     </nz-badge>
     <span class="font-medium ml-1 text-base text-white">Giỏ hàng</span>
   </div>
-  <div class="ml-6 items-center text-white flex hover:cursor-pointer" (click)="login()"><i class="text-3xl flex items-center" nz-icon
-      nzType="user" nzTheme="outline"></i><span class="font-medium text-baseF">Đăng nhập</span></div>
+  <div class="ml-6 items-center text-white flex hover:cursor-pointer" *ngIf="!userProfile.isAuthenticate else userTmp"
+    (click)="login()">
+    <i class="text-3xl flex items-center" nz-icon nzType="user" nzTheme="outline"></i><span
+      class="font-medium text-baseF">Đăng nhập</span>
+  </div>
+  <ng-template #userTmp>
+    <div class="ml-6 items-center text-white flex hover:cursor-pointer" nz-dropdown [nzDropdownMenu]="userMenu"
+      nzTrigger="click">
+      <i class="text-3xl flex items-center" nz-icon nzType="user" nzTheme="outline"></i><span
+        class="font-medium text-baseF">{{userProfile.firstName | uppercase}} {{userProfile.lastName | uppercase}}</span>
+    </div>
+    <nz-dropdown-menu #userMenu="nzDropdownMenu">
+      <ul nz-menu nzSelectable>
+        <li nz-menu-item (click)="goAdminPage()"><i nz-icon nzType="setting" nzTheme="outline" class="mr-2"></i>Quản trị
+        </li>
+        <li nz-menu-item (click)="logout()"><i nz-icon nzType="logout" nzTheme="outline" class="mr-2"></i>Logout</li>
+      </ul>
+    </nz-dropdown-menu>
+  </ng-template>
 </div>
+
+
 
 <ng-template #suffixIconSearch>
   <i nz-icon nzType="search"></i>
