--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,8 @@
+<div class="bg-blue-50">
 <router-outlet></router-outlet>
+  <app-header></app-header>
+  <div class="flex justify-center w-1200 ml-auto mr-auto">
+    <router-outlet></router-outlet>
+  </div>
+  <app-footer></app-footer>
+</div>
