--- a/src/app/core/authentication/login/login.component.html
+++ b/src/app/core/authentication/login/login.component.html
@@ -6,13 +6,13 @@
         class="text-red-500 text-base" nz-icon nzType="close" nzTheme="outline"></i></div>
     <div class="grid grid-cols-3">
       <div class="col-span-2 p-4">
-        <h3 class="text-2xl font-semibold">Xin chào,</h3>
-        <p class="text-base ">Đăng nhập</p>
-        <input class="mt-4 text-base" type="text" nz-input placeholder="Tên đăng nhập" [(ngModel)]="username">
-        <input class="mt-4 text-base" type="password" nz-input placeholder="Mật khẩu" [(ngModel)]="password">
+        <h3 class="text-2xl font-semibold">{{'LOGIN.WELCOME' | translate}},</h3>
+        <p class="text-base ">{{'LOGIN.TITLE' | translate}}</p>
+        <input class="mt-4 text-base" type="text" nz-input placeholder="{{'LOGIN.USERNAME' | translate}}" [(ngModel)]="username">
+        <input class="mt-4 text-base" type="password" nz-input placeholder="{{'LOGIN.PASSWORD' | translate}}" [(ngModel)]="password">
         <button
-          class="mt-4 w-full text-base font-medium bg-red-300 border-red-500 border-2 text-white py-1 hover:bg-red-500" (click)="login()">Đăng
-          nhập</button>
+          class="mt-4 w-full text-base font-medium bg-red-300 border-red-500 border-2 text-white py-1 hover:bg-red-500"
+          (click)="login()">{{'LOGIN.LOGIN' | translate}}</button>
       </div>
       <div class="col-span-1 flex justify-center items-center bg-red-custom">
         <img src="assets/icon/small-icon.png">
