--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,19 +2,5 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
-
-.w-fit {
-  width: fit-content !important;
-}
-
-.h-fit {
-  height: fit-content !important;
-}
-
-.bg-red-custom {
-  background-color: #e0052b;
-}
-
-.w-1200 {
-  width: 1200px;
-}
+@import './styles/color';
+@import './styles/utilities';
