--- a/src/app/admin/modules/product/product/product.component.scss
+++ b/src/app/admin/modules/product/product/product.component.scss
@@ -1,8 +1,13 @@
 nz-divider {
-    color: #333;
-    fontweight: normal;
-  }
-  .inner-box {
-    background: #0092ff;
-    padding: 8px 0;
-  }
+  color: #333;
+  font-weight: normal;
+}
+.inner-box {
+  background: #0092ff;
+  padding: 8px 0;
+}
+
+.h-407 {
+  height: 407px;
+}
+
