--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -8,7 +8,7 @@
   >
     <div class="sidebar-logo">
       <div>
-        <img src="assets/icon/large-icon.png" class="w-80" alt="logo" />
+        <img src="assets/logo/large-icon.png" class="w-80" alt="logo" />
       </div>
     </div>
     <ul
