--- a/src/app/main/modules/home/home.component.html
+++ b/src/app/main/modules/home/home.component.html
@@ -1,5 +1,5 @@
 
-<div class="mt-4 grid grid-cols-4">
+<div class="grid grid-cols-4">
   <div class="col-span-3">
     <nz-carousel class="h-407 w-900" nzAutoPlay>
       <div nz-carousel-content *ngFor="let item of sliderImages">
