--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,7 @@
+<app-header></app-header>
 <div class="bg-blue-50">
-  <app-header></app-header>
-  <div class="flex justify-center w-1200 ml-auto mr-auto">
+  <div class="py-4 body ml-auto mr-auto w-1200">
     <router-outlet></router-outlet>
   </div>
 </div>
+<app-footer></app-footer>
