--- a/src/app/admin/modules/product-type/product-type/product-type.component.html
+++ b/src/app/admin/modules/product-type/product-type/product-type.component.html
@@ -2,7 +2,7 @@
   <div class="flex items-center">
     <h4 class="text-base font-bold">Danh sách loại sản phẩm</h4>
     <nz-input-group nzSize="small" class="ml-auto w-1/3 rounded-md input-group" [nzSuffix]="suffixIconSearch">
-      <input type="text" class="text-base" nz-input placeholder="Tìm kiếm" [(ngModel)]="filterName" (ngModelChange)="onFilterNameChange($event)" />
+      <input type="text" class="text-base" nz-input placeholder="Tìm kiếm" [formControl]="searchNameForm" />
     </nz-input-group>
 
   </div>
