--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="flex justify-center h-16 w-full bg-red-custom items-center" *ngIf="userProfile$ | async as userProfile">
-  <a href=""><img class="hover:cursor-pointer h-16" src="assets/icon/large-icon.png"></a>
+  <a href=""><img class="hover:cursor-pointer h-16" src="assets/logo/large-logo.png"></a>
   <i class="text-white text-4xl flex items-center hover:cursor-pointer ml-4" cl nz-icon nzType="menu" nzTheme="outline"
     nz-dropdown [nzDropdownMenu]="menu" nzPlacement="bottomRight" nzTrigger="click">
     <nz-dropdown-menu #menu="nzDropdownMenu">
@@ -29,7 +29,7 @@
     <div class="font-medium">{{'HEADER.CONTACT' | translate}}:</div>
     <div class="font-bold text-base">1800.2097</div>
   </div>
-  <div class="ml-6 hover:cursor-pointer flex items-center">
+  <div class="ml-6 hover:cursor-pointer flex items-center" routerLink="/cart">
     <nz-badge [nzCount]="5" class="text-white text-3xl flex items-center">
       <i nz-icon nzType="shopping" nzTheme="fill"></i>
     </nz-badge>
