--- a/src/app/main/components/login/login.component.html
+++ b/src/app/main/components/login/login.component.html
@@ -15,7 +15,7 @@
           (click)="login()">{{'LOGIN.LOGIN' | translate}}</button>
       </div>
       <div class="col-span-1 flex justify-center items-center bg-red-custom">
-        <img src="assets/icon/small-icon.png">
+        <img src="assets/logo/small-icon.png">
       </div>
     </div>
   </ng-container>
