--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,6 +1,6 @@
-<div class="bg-blue-50">
+<div class="">
   <app-header></app-header>
-  <div class="flex justify-center w-1200 ml-auto mr-auto">
+  <div class="w-1200 ml-auto mr-auto">
     <router-outlet></router-outlet>
   </div>
 </div>
