feature/cart-module

--- a/src/app/main/components/footer/footer.component.html
+++ b/src/app/main/components/footer/footer.component.html
@@ -1,4 +1,4 @@
-<div class="flex justify-center w-full bg-white mx-auto px-10 shadow-lg">
+<div class="flex justify-center w-full bg-white mx-auto px-10 footer-shadow">
   <div class="flex flex-wrap text-left text-black">
     <div class="w-full md:w-1/4 p-5 md:text-left">
       <div class="mt-6 mb-2 text-x2 font-bold">GIỚI THIỆU CÔNG TY</div>
