--- a/src/app/main/modules/cart/cart/cart.component.html
+++ b/src/app/main/modules/cart/cart/cart.component.html
@@ -133,13 +133,17 @@
     <label nz-radio nzValue="A">
       <i class="vnpay-logo mr-2"></i>
       Thanh toán qua VNPAY
+      <i class="atm-logo ml-2"></i>
     </label>
-    <label nz-radio nzValue="B"
-      ><i class="vnpay-logo mr-2"></i>Cổng thanh toán ZaloPay</label
-    >
-    <label nz-radio nzValue="C"
-      ><i class="vnpay-logo mr-2"></i>Ví Moca qua ứng dựng Grab</label
-    >
+    <label nz-radio nzValue="B">
+      <i class="zalopay-logo mr-2"></i>Cổng thanh toán ZaloPay
+      <i class="atm-logo ml-2"></i>
+      <i class="visa-logo ml-2"></i>
+      <i class="mastercard-logo ml-2"></i>
+    </label>
+    <label nz-radio nzValue="C">
+      <i class="momo-logo mr-2"></i>Thanh toán qua Ví Momo
+    </label>
   </nz-radio-group>
 </div>
 <button
