--- a/src/app/main/components/header/header.component.scss
+++ b/src/app/main/components/header/header.component.scss
@@ -10,3 +10,11 @@
   height: 32px;
   line-height: 32px;
 }
+
+.item-header {
+  padding: 3px 5px 3px 5px;
+  border-radius: 10px;
+  &:hover {
+    background: rgba(255, 255, 255, 0.2);
+  }
+}
