--- a/src/app/main/components/header/header.component.html
+++ b/src/app/main/components/header/header.component.html
@@ -30,6 +30,7 @@
       class="text-base"
       nz-input
       placeholder="{{'HEADER.SEARCH' | translate}}"
+      [nzAutocomplete]="auto"
     />
   </nz-input-group>
   <div class="ml-4 border-2 border-white">
@@ -138,4 +139,17 @@
   <i nz-icon nzType="search"></i>
 </ng-template>
 
+<nz-autocomplete #auto>
+  <nz-auto-option *ngFor="let group of autoCompleteData" nzLabel="iPhone 11 I Chính hãng VN/A" nzValue="iPhone 11 I Chính hãng VN/A">
+    <div class="flex">
+      <img src="assets/logo/small-logo.png" class="w-10 h-11 object-contain mr-1">
+      <div class="flex-1 font-semibold">
+        <h4 class="text-sm">iPhone 11 I Chính hãng VN/A</h4>
+        <p class="text-red-600 text-xs">16.000.000 ₫</p>
+      </div>
+    </div>
+  </nz-auto-option>
+</nz-autocomplete>
+
 <app-login #loginPage></app-login>
+
